--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc -p .",
     "serve": "nodemon -e js -w lib ./lib/server.js",
-    "test": "jest --watchAll --collectCoverage"
+    "test": "jest --watchAll --collectCoverage",
+    "dev": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,17 +21,31 @@
   },
   "homepage": "https://github.com/Matiyas1994/Tour-Ethiopia-Backend#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
+    "@types/pino": "^7.0.5",
+    "@types/streamifier": "^0.1.0",
+    "cloudinary": "^1.34.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
+    "pino": "^8.10.0",
+    "streamifier": "^0.1.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
